8243947: [TESTBUG] hotspot/jtreg:hotspot_appcds_dynamic fails when the JDK doesn't have default CDS archive
Generate a default CDS archive when necessary before running AppCDS dynamic tests.

Reviewed-by: iklam